ReSharper.FSharp/test/data/parsing/errors/Type - Attribute target 01.fs
namespace Ns

[<x>]
type T = class end
